<resources>
    <string name="app_name">My Vocab</string>

    <string name="title_section1">Personal Vocab Builder</string>
    <string name="title_section2">My Vocab</string>
    <string name="title_section3">Review</string>
    <string name="title_section4">Test</string>
    <string name="title_section5">Dictionary</string>
    <string name="title_section6">Categories</string>
    <string name="title_section7">Settings</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_example">Test</string>

    <string name="action_settings">Settings</string>
    <string name="add_vocab_button">Add Vocab</string>
    <string name="title_activity_my_vocab">My Vocab</string>

    <string name="hello_world">Hello world!</string>
    <string name="vocab_level">Vocab Level Bars</string>
    <string name="del_vocab_button">Delete Vocab</string>
    <string name="title_activity_review">Review</string>
    <string name="title_activity_categories">Categories</string>
    <string name="word_definition_button"><![CDATA[Word -> Definition]]></string>
    <string name="definition_word_button"><![CDATA[Definition -> Word]]></string>
    <string name="title_activity_word_definition">Review</string>
    <string name="reveal_answer">Reveal Answer</string>
    <string name="sample_word">Sample Word</string>
    <string name="sample_definition">Sample Definition</string>
    <string name="level_difficult">Difficult</string>
    <string name="level_familiar">Familiar</string>
    <string name="level_easy">Easy</string>
    <string name="level_perfect">Perfect</string>
    <string name="review_option_selected">Review Option</string>
    <string name="level_again">Again</string>
    <string name="categories_my_vocab">My Vocab</string>
    <string name="title_activity_my_word_bank">My Word Bank</string>
    <string name="title_activity_gmat">GMAT</string>
    <string name="title_activity_gre">GRE</string>
    <string name="empty_text_view">Begin by adding the vocab you want to learn!</string>
    <string name="label_vocab_button">Add Vocab To</string>
    <string name="select_all_button">Select All</string>
    <string name="search_vocab">Search Vocab</string>
    <string name="search_button">Search Vocab</string>
    <string name="review_button">Review</string>
    <string name="add_category">Add Category</string>
    <string name="sort_vocab_button">Sort Vocab</string>
    <string name="difficultCount">difficultCount</string>
    <string name="familiarCount">familiarCount</string>
    <string name="easyCount">easyCount</string>
    <string name="perfectCount">perfectCount</string>
    <string name="moreFamiliarVocabCount">moreFamiliarVocabCount</string>
    <string name="dayStreakSharedPreferences">Day Streak</string>
    <string name="yearKeySP">yearKeySP</string>
    <string name="dayOfYearKeySP">dayOfYearKeySP</string>
    <string name="dayStreakCountKeySP">dayStreakCountKeySP</string>
    <string name="exportTitle">Export</string>
    <string name="externalStoragePermissionDenied">No external storage permission to export categories.</string>
    <string name="importTitle">Import</string>
    <string name="specifiedImportCategory">My Vocab Export</string>
    <string name="speech_settings">Speech Settings</string>
    <string name="sharedPrefTranslationFile">Translation</string>
    <string name="sharedPrefTranslationSourceKey">Source</string>
    <string name="sharedPrefTranslationTargetKey">Target</string>
    <string name="sharedPrefSortFile">Sort Order</string>
    <string name="sharedPrefSpeechFile">com.cjlsdeveloper.speech</string>
    <string name="upgradeTitle">Upgrade</string>
    <string name="ttsMonthlyLimitPref">TTS Monthly Limit</string>
    <string name="isSubscribed">Subscribed</string>
    <string name="remainingTTSQuota">Remaining TTS Quota</string>
    <string name="lastUpdatedMonth">Last Updated Month</string>
    <string name="subscribedTTS">Subscribed TTS</string>
    <string name="monthlyTTSPrice">Monthly TTS Price</string>
    <string name="yearlyTTSPrice">Yearly TTS Price</string>
    <string name="autoRenewed">Auto-renewed</string>
    <string name="monthlyTTSPriceAmountMicros">Monthly TTS Price Amount Micros</string>
    <string name="yearlyTTSPriceAmountMicros">Yearly TTS Price Amount Micros</string>
    <string name="sharedPrefDailyReviewFile">My Vocab Daily Review</string>
    <string name="sharedPrefDailyReviewCategoryKey">Daily Review Category</string>
    <string name="sharedPrefDailyReviewTypeKey">Daily Review Type</string>
    <string name="sharedPrefDailyReviewModeKey">Daily Review Mode</string>
    <string name="sharedPrefDailyReviewGoalKey">Daily Review Goal</string>
    <string name="sharedPrefDailyReviewSwitchKey">Daily Review Switch</string>
    <string name="sharedPrefDailyReviewStudyHourKey">Daily Review Study Hour</string>
    <string name="sharedPrefDailyReviewStudyMinKey">Daily Review Study Min</string>
    <color name="white">#ffffff</color>
    <color name="black">#000000</color>
    <color name="app_icon_color">#2b5ea2</color>
    <color name="dark_primary_color">#244f88</color>
    <color name="light_primary_color">#5e8ed1</color>
    <color name="light_app_icon_color">#4A78B5</color>
    <color name="sub_button_color">#2975B0</color>
    <color name="level_color">#FFB84F</color>


    <string-array name="table_array">
        <item>My Vocab</item>
        <item>My Word Bank</item>
        <item>GMAT</item>
        <item>GRE</item>
    </string-array>

    <string-array name="review_type_array">
        <item>Random</item>
        <item>Most familiar</item>
        <item>Least familiar</item>
        <item>Most recent</item>
        <item>Least recent</item>
    </string-array>

    <string-array name="review_mode_array">
        <item>Vocab -> Definition</item>
        <item>Definition -> Vocab</item>
        <item>Vocab/Def -> Def/Vocab</item>
    </string-array>

    <string-array name="review_goal_array">
        <item>Casual (10 Vocab)</item>
        <item>Regular (20 Vocab)</item>
        <item>Serious (30 Vocab)</item>
    </string-array>

</resources>
